cluster/staging-vcluster/vcluster/vcluster-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: vcluster-ingressroute
  namespace: staging-vcluster

spec:
  # entryPoints:                  # [1]
  #   - footcp
  routes:                       # [2]
  - match: "HostSNI(`staging-vcluster.${DOMAIN_2}`)"         # [3]
    services:                   # [7]
    - name: vcluster                 # [8]
      port: 443                # [9]
      weight: 10                # [10]
      # terminationDelay: 400     # [11]
      # proxyProtocol:            # [12]
      #   version: 1              # [13]
  tls:                          # [14]
    passthrough: true          # [23]
